Revision history for AproJo.

{{$NEXT}}

0.016  2015-04-21 15:48:36 CEST
       - added spelling tests (AUTHOR_TESTING only)

0.015  2015-04-19 12:31:47 CEST
       - improve pod

0.014  2015-04-13 10:57:15 CEST
       - note on status

0.013  2015-04-08 13:54:55 CEST
       - push version of Plugin::Form

0.012  2015-04-07 14:31:48 CEST
       - debugging tests

0.011  2015-04-01 17:54:09 CEST
       - adapt dependencies

0.010  2015-03-31 15:31:46 CEST
       - adapt dependencies

0.009  2015-03-31 14:28:53 CEST
       - add travis
       - add badges
       - ServerInfo and DBInfo are now plugins with their own dist

0.008  2014-05-08 14:16:14 CEST
       - move Mojolicious::Plugin::Form to its own dist

0.007  2014-05-08 12:27:41 CEST
       - try a developer version

0.006  2014-05-07 15:27:39 CEST
       - adapted foldernames for CPAN

0.005  2014-05-02 12:50:08 CEST
       - correct versions

0.004  2014-04-28 17:13:14 CEST
       - debug failed login test

0.003  2014-04-24 12:20:09 CEST
       - debug warnings (fails on CPANTesters), cleanup

0.002  2014-04-23 15:21:26 CEST
       - need Perl v5.10.1 as minimum

0.001  2014-04-23 
       - initial version