@@ -10,7 +10,7 @@ perl:
 install:
   - export RELEASE_TESTING=1 AUTOMATED_TESTING=1 AUTHOR_TESTING=1 HARNESS_OPTIONS=c HARNESS_TIMER=1
   - cpanm --quiet --notest Devel::Cover::Report::Coveralls
-  - cpanm --quiet --notest --installdeps .
+  - cpanm --quiet --notest --installdeps --with-develop .
 
 script:
   - PERL5OPT=-MDevel::Cover=-coverage,statement,branch,condition,path,subroutine prove -lrsv t
