@@ -30,13 +30,11 @@
          }
       },
       "develop" : {
-         "recommends" : {
-            "Test::Pod::Spelling::CommonMistakes" : "0",
-            "Test::Spelling" : "0"
-         },
          "requires" : {
             "Dist::Milla" : "v1.0.14",
-            "Test::Pod" : "1.41"
+            "Test::Pod" : "1.41",
+            "Test::Pod::Spelling::CommonMistakes" : "0",
+            "Test::Spelling" : "0"
          }
       },
       "runtime" : {
@@ -73,7 +71,7 @@
          }
       }
    },
-   "release_status" : "testing",
+   "release_status" : "stable",
    "resources" : {
       "bugtracker" : {
          "web" : "https://github.com/wollmers/AproJo/issues"
